--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>clock</title><link href="css/app.87223dbb.css" rel="preload" as="style"><link href="js/app.f7cff3e2.js" rel="preload" as="script"><link href="js/chunk-vendors.609ba261.js" rel="preload" as="script"><link href="css/app.87223dbb.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but clock doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="js/chunk-vendors.609ba261.js"></script><script src="js/app.f7cff3e2.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="favicon.ico">
+    <title>clock</title>
+    <link href="css/app.87223dbb.css" rel="preload" as="style">
+    <link href="js/app.f7cff3e2.js" rel="preload" as="script">
+    <link href="js/chunk-vendors.609ba261.js" rel="preload" as="script">
+    <link href="css/app.87223dbb.css" rel="stylesheet">
+</head>
+
+<body><noscript><strong>We're sorry but clock doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript>
+    <div id="app"></div>
+    <script src="js/chunk-vendors.609ba261.js"></script>
+    <script src="js/app.f7cff3e2.js"></script>
+</body>
+
+</html>
